# Seeded_MatPRG

./: .gitignore  Cargo.toml  README.md  run_bench.sh
benches/: comparison.rs  comparison_matprg.rs  comparison_trade_v2.rs  registerdata.rs
src/: lib.rs
src/cp_snark/: mod.rs
src/cp_snark/cp_groth16/: constraints.rs  data_structure.rs  generator.rs  mod.rs  prover.rs  test.rs  verifier.rs
src/gadget/: hybrid_key_transport.rs  mod.rs
src/gadget/hashes/: mod.rs
src/gadget/hashes/poseidon/: constraints.rs  mod.rs  parameters.rs
src/gadget/tests/: mod.rs  test_trade_key_transport.rs
src/original_MatPRG/: mod.rs
src/original_MatPRG/MatPRG/: circuit.rs  mod.rs
src/original_MatPRG/MatPRG/tests/: mod.rs  test_MatPRG.rs
src/original_MatPRG/MatPRGEnc/: circuit.rs  mod.rs
src/original_MatPRG/MatPRGEnc/tests/: mod.rs  test_MatPRGEnc.rs
src/original_MatPRG/accepttrade/: circuit.rs
src/original_MatPRG/accepttrade/tests/: test_accepttrade.rs
src/original_MatPRG/gentrade/: circuit.rs
src/original_MatPRG/gentrade/tests/: mod.rs  test_gentrade.rs
src/original_MatPRG/mimc/: circuit.rs
src/original_MatPRG/mimc/tests/: mod.rs  test_mimc.rs
src/original_MatPRG/register_MatPRG/: circuit.rs  mod.rs
src/original_MatPRG/register_MatPRG/tests/: mod.rs  test_circuit.rs
src/original_MatPRG/register_MiMC_CTR/: circuit.rs  mod.rs
src/original_MatPRG/register_MiMC_CTR/tests/: mod.rs  test_circuit.rs
src/original_MatPRG/register_Poseidon_CTR/: circuit.rs  mod.rs
src/original_MatPRG/register_Poseidon_CTR/tests/: test_circuit.rs
src/original_MatPRG/registerdatav1/: circuit.rs  mod.rs
src/original_MatPRG/registerdatav1/tests/: mod.rs  test_registerdatav1.rs
src/original_MatPRG/registerdatav2/: circuit.rs  mod.rs
src/original_MatPRG/registerdatav2/tests/: mod.rs  test_registerdatav2.rs
src/original_MatPRG/registerdatav3/: circuit.rs  mod.rs
src/original_MatPRG/registerdatav3/tests/: mod.rs  test_registerdatav3.rs
src/seeded_MatPRG/: mod.rs
src/seeded_MatPRG/accepttrade_v2/: circuit.rs
src/seeded_MatPRG/accepttrade_v2/tests/: mod.rs  test_accepttrade_v2.rs
src/seeded_MatPRG/gentrade_v2/: circuit.rs
src/seeded_MatPRG/gentrade_v2/tests/: mod.rs  test_gentrade_v2.rs
src/seeded_MatPRG/register_seeded_matprg/: circuit.rs  mod.rs
